--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -1,5 +1,43 @@
 {% extends "layout.njk" %}
 
 {% block content %}
-    Teachers
+    <div class="card">
+        <section class="image"></section>
+        <section class="content">
+            <h3>Detalhes</h3>
+
+            <div class="item">
+                <div>Nome</div>
+                <div>Carolina Alves</div>
+            </div>
+
+            <div class="item">
+                <div>Idade</div>
+                <div>24</div>
+            </div>
+
+            <div class="item">
+                <div>Grau de Escolaridade</div>
+                <div>Ensino Superior</div>
+            </div>
+
+            <div class="item">
+                <div>Tipo de Aula</div>
+                <div>A distância</div>
+            </div>
+
+            <div class="item">
+                <div>Acompanhamento</div>
+                <div>
+                    <span>Matemática</span>
+                    <span>Física</span>
+                </div>
+            </div>
+
+            <div class="item">
+                <div>Desde</div>
+                <div>01/01/2019</div>
+            </div>
+        </section>
+    </div>
 {% endblock content %}
