add show teacher profile logic

--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -36,8 +36,8 @@
             <div class="item">
                 <div>Type of Class</div>
                 <div>
-                    <span><input type="radio" name="type_class">Distance</span>
-                    <span><input type="radio" name="type_class">Presential</span></div>
+                    <span><input type="radio" name="type_class" value="Distance">Distance</span>
+                    <span><input type="radio" name="type_class" value="Presential">Presential</span></div>
             </div>
 
             <div class="item">
