--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -39,6 +39,8 @@
                     <div>Since</div>
                     <div>{{ teacher.date}}</div>
                 </div>
+
+                <a href="#" class="button">Editar</a>
             </section>
         </div>
     {% endblock content %}
