--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -4,7 +4,7 @@
     <form class="card" method="POST" action="/teachers">
         <section class="image"></section>
         <section class="content">
-            <h3>Teacher</h3>
+            <h3>Edit Teacher</h3>
             {% include "teachers/fields.njk"%}
         </section>
     </form>
