--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -40,7 +40,7 @@
                     <div>{{ teacher.date}}</div>
                 </div>
 
-                <a href="#" class="button">Editar</a>
+                <a href="/teachers/{{teacher.id}}/edit" class="button">Editar</a>
             </section>
         </div>
     {% endblock content %}
