--- a/public/styles.css
+++ b/public/styles.css
@@ -105,7 +105,8 @@ header {
 }
 
 .image {
-  background-image: url(https://source.unsplash.com/collection/10356769/600x600);
+  background-position: center;
+  background-size: cover;
   width: 400px;
   min-height: 400px;
   background-repeat: no-repeat;
@@ -143,6 +144,7 @@ header {
   border: none;
 }
 
+.table_index tbody td:nth-child(2) span,
 .content .item span {
   background-color: #7777;
   padding: 8px 16px;
@@ -150,6 +152,7 @@ header {
   margin-left: 4px;
   display: inline-block;
   margin-top: 8px;
+  font-size: 12px;
 }
 
 /* ============== FORM ==================*/
@@ -203,4 +206,52 @@ a.button {
   text-decoration: none;
   color: white;
   background-color: #555;
+}
+
+/*========= TABLE INDEX ===========*/
+
+.table_index {
+  display: block;
+  color: white;
+}
+
+td,
+th {
+  padding: 1rem;
+}
+
+tbody td:first-child {
+  display: grid;
+  grid-template-columns: 64px 1fr;
+  align-items: center;
+}
+
+tbody td:first-child span {
+  width: 48px;
+  height: 48px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 50%;
+  box-shadow: 3px 1px 6px -4px #7777;
+  border: 2px solid white;
+}
+
+tbody td:last-child,
+thead td:last-child {
+  align-items: center;
+  text-align: center;
+}
+
+tbody td:nth-child(2) {
+  vertical-align: center;
+}
+
+tbody td:last-child a {
+  text-decoration: none;
+  padding: 8px 16px;
+  color: white;
+  text-transform: uppercase;
+  font-size: 12px;
+  background-color: #7777;
+  border-radius: 8px;
 }
