--- a/views/teachers/create.njk
+++ b/views/teachers/create.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <form class="card" method="POST" action="/teachers">
-        <section class="image"></section>
+        <section class="image" style="background-image:url(https://source.unsplash.com/collection/87821/600x600)"></section>
         <section class="content">
             <h3>Teacher</h3>
             {% include "teachers/fields.njk"%}
