--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <form class="card" method="POST" action="/teachers?_method=PUT">
-        <section class="image"></section>
+        <section class="image" style="background-image:url({{ teacher.avatar_url }})"></section>
         <section class="content">
             <h3>Edit Teacher</h3>
             {% include "teachers/fields.njk"%}
