--- a/views/teachers/show.njk
+++ b/views/teachers/show.njk
@@ -2,7 +2,7 @@
 
 {% block content %}
     <div class="card">
-        <section class="image"></section>
+        <section class="image" style="background-image:url({{ teacher.avatar_url }})"></section>
         <section class="content">
             <h3>Teacher Profile</h3>
 
@@ -29,7 +29,7 @@
             <div class="item">
                 <div>Subjects</div>
                 <div>
-                    {% for subject in teacher.subjects %}
+                    {% for subject in teacher.subjectArray %}
                         <span>{{subject}}</span>
                         {% endfor%}
                     </div>
