--- a/views/teachers/index.njk
+++ b/views/teachers/index.njk
@@ -2,6 +2,7 @@
 
 {% block content %}
     <div class="card table_index">
+        <a class="new_member" href="/teachers/create">Add Teacher</a>
         <table width="100%">
             <thead>
                 <tr>
