--- a/views/layout.njk
+++ b/views/layout.njk
@@ -18,13 +18,13 @@
                 </div>
             </div>
             <div class="links">
-                <a href="/">Teachers</a>
+                <a href="/teachers">Teachers</a>
                 <a href="/students">Students</a>
             </div>
         </header>
 
         {% block content %}{% endblock%}
             {% block script %}{% endblock %}
-
+            <script src="/scripts.js"></script>
         </body>
     </html>
