--- a/views/students/edit.njk
+++ b/views/students/edit.njk
@@ -13,5 +13,8 @@
             <button type="submit">Delete</button>
         </form>
     </section>
-
 {% endblock content %}
+
+{% block script %}
+    <script src="/delete_confirmation.js"></script>
+{% endblock script %}
