--- a/views/teachers/edit.njk
+++ b/views/teachers/edit.njk
@@ -15,3 +15,7 @@
     </section>
 
 {% endblock content %}
+
+{% block script %}
+    <script src="/delete_confirmation.js"></script>
+{% endblock script %}
