--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -18,7 +18,9 @@
                             <span style="background-image:url({{ teacher.avatar_url }})"></span>
                             {{teacher.name}}</td>
                         <td>
-                            {% for subject in teacher.subjectArray %}
+                            {% for subject in teacher
+                                .subjects_taught
+                                .split(',') %}
                                 <span>{{ subject }}</span>
                             {% endfor %}
                         </td>
