--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -13,7 +13,7 @@
 
             <div class="item">
                 <div>Age</div>
-                <div>{{ student.age }}</div>
+                <div>{{ student.birth }}</div>
             </div>
 
             <div class="item">
@@ -23,7 +23,7 @@
 
             <div class="item">
                 <div>Scholarity</div>
-                <div>{{ student.scholarity }}</div>
+                <div>{{ student.schooling }}</div>
             </div>
 
             <div class="item">
