--- a/src/app/views/students/show.njk
+++ b/src/app/views/students/show.njk
@@ -37,6 +37,11 @@
                     h.</div>
             </div>
 
+            <div class="item">
+                <div>Teacher</div>
+                <div>{{ student.teacher_name }}</div>
+            </div>
+
             <a href="/students/{{student.id}}/edit" class="button">Editar</a>
         </section>
     </div>
