--- a/public/styles.css
+++ b/public/styles.css
@@ -267,3 +267,23 @@ header .active {
   font-weight: bold;
   font-size: 16px;
 }
+
+/*================= FILTER ====================*/
+
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+.header form {
+  display: grid;
+  grid-template-columns: 1fr 120px;
+}
+
+.header form input {
+  border-bottom: 1px solid #555;
+  background-color: black;
+}
