--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -2,7 +2,13 @@
 
 {% block content %}
     <div class="card table_index">
-        <a class="new_member" href="/students/create">Add Student</a>
+        <div class="header">
+            <a class="new_member" href="/students/create">Add Student</a>
+            <form action="/students" method="GET">
+                <input type="text" name="filter" placeholder="name or email" value="{{filter}}">
+                <button type="submit">Filter</button>
+            </form>
+        </div>
         <table width="100%">
             <thead>
                 <tr>
