--- a/src/app/views/students/index.njk
+++ b/src/app/views/students/index.njk
@@ -37,5 +37,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="pagination" data-page="{{pagination.page}}" data-total="{{pagination.total}}" data-filter="{{filter}}"></div>
     </div>
 {% endblock content %}
