--- a/src/app/views/teachers/index.njk
+++ b/src/app/views/teachers/index.njk
@@ -41,5 +41,6 @@
                 {% endfor %}
             </tbody>
         </table>
+        <div class="pagination" data-page="{{pagination.page}}" data-total="{{pagination.total}}" data-filter="{{filter}}"></div>
     </div>
 {% endblock content %}
